--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,16 @@ before_install:
 script:
     - docker run -e CI=true gega/docker-react npm run test
 language: generic
+
+deploy:
+    provider: elastickbeanstalk
+    region: "us-west-2"
+    app: "docker"
+    env: "Docker-env"
+    bucket_name: "sdfsdfsfds"
+    bucket_path: "docker"
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key:
+        secure: "$AWS_SECRET_KEY"
